# dft_toolkit

./: README.md  pyproject.toml
cli/: dfttk_eos.py  dfttk_mp_download.py  dfttk_poscar_to_fdf.py  dfttk_struct_out_to_poscar.py
dft_toolkit/: eos.py  siesta_utils.py
